@@ -1,0 +1,1 @@
+require "fat_free_crm/plugin.rb"
